WIP static rendered cookie

--- a/example-static/index.html
+++ b/example-static/index.html
@@ -4,9 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="../../src/styles.css" />
+        <link rel="stylesheet" href="../src/styles.css" />
     </head>
     <body>
+        <div id="cookie-consent">
+            <script type="text/json">
+                {}
+            </script>
+        </div>
         <div class="CookieConsent">
             <div class="CookieConsent__content">
                 <img
@@ -44,6 +49,6 @@
             </div>
         </div>
 
-        <script src=""></script>
+        <script src="../src/static.ts"></script>
     </body>
 </html>
