Adding static dev  and build process

--- a/example-static/index.html
+++ b/example-static/index.html
@@ -9,7 +9,9 @@
     <body>
         <div id="cookie-consent">
             <script type="text/json">
-                {}
+                {
+                    "zIndex": 1
+                }
             </script>
         </div>
         <div class="CookieConsent">
@@ -49,6 +51,6 @@
             </div>
         </div>
 
-        <script src="../src/static.ts"></script>
+        <script src="../dist/static/cookie-consent.js"></script>
     </body>
 </html>
