Adding status and reopen button elements

--- a/example-static/index.html
+++ b/example-static/index.html
@@ -10,10 +10,16 @@
         <div id="cookie-consent">
             <script type="text/json">
                 {
-                    "zIndex": 1
+                    "zIndex": 1,
+                    "icon": "https://unsplash.it/100",
+                    "title": "Verwendung von Cookies für Analyse- und Marketingzwecke"
                 }
             </script>
         </div>
+
+        <button data-consent-button>Open consent banner</button>
+        <div data-consent-status></div>
+
         <script src="../dist/static/cookie-consent.js"></script>
     </body>
 </html>
