--- a/example/public/index.html
+++ b/example/public/index.html
@@ -34,6 +34,9 @@
 
         <div id="root"></div>
 
+        <button data-consent-button>Open consent banner</button>
+        <div data-consent-status></div>
+
         <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
