Adding class to status and button selectors

--- a/example-static/index.html
+++ b/example-static/index.html
@@ -18,7 +18,9 @@
         </div>
 
         <button data-consent-button>Open consent banner</button>
+        <button class="cookie-consent-button">Open consent banner</button>
         <div data-consent-status></div>
+        <div class="cookie-consent-status"></div>
 
         <script src="../dist/static/cookie-consent.js"></script>
     </body>
