--- a/example-static/index.html
+++ b/example-static/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel="stylesheet" href="../src/styles.css" />
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <div id="cookie-consent">
@@ -22,6 +22,6 @@
         <div data-consent-status></div>
         <div class="cookie-consent-status"></div>
 
-        <script src="../dist/static/cookie-consent.js"></script>
+        <script src="cookie-consent.min.js"></script>
     </body>
 </html>
