fixing some IE11 problems

--- a/example-static/index.html
+++ b/example-static/index.html
@@ -22,6 +22,10 @@
         <div data-consent-status></div>
         <div class="cookie-consent-status"></div>
 
+        <script type="text/cookie-consent-script">
+            console.log('b.ig brother is watching you! 👀');
+        </script>
+
         <script src="cookie-consent.min.js"></script>
     </body>
 </html>
