Updating status elements initially

--- a/example-static/index.html
+++ b/example-static/index.html
@@ -19,8 +19,8 @@
 
         <button data-consent-button>Open consent banner</button>
         <button class="cookie-consent-button">Open consent banner</button>
-        <div data-consent-status></div>
-        <div class="cookie-consent-status"></div>
+        <div data-consent-status>Cookie Status</div>
+        <div class="cookie-consent-status">Cookie Status</div>
 
         <script type="text/cookie-consent-script">
             console.log('b.ig brother is watching you! 👀');
