adding 12h format with am pm

--- a/example-static/index.html
+++ b/example-static/index.html
@@ -12,7 +12,8 @@
                 {
                     "zIndex": 1,
                     "icon": "https://unsplash.it/100",
-                    "title": "Verwendung von Cookies für Analyse- und Marketingzwecke"
+                    "title": "Verwendung von Cookies für Analyse- und Marketingzwecke",
+                    "dateFormat": "DD. MMMM YYYY"
                 }
             </script>
         </div>
