fixing cookie formatting and updating Readme

--- a/example/public/index.html
+++ b/example/public/index.html
@@ -34,6 +34,9 @@
 
         <div id="root"></div>
 
+        <script type="text/cookie-consent-script">
+            console.log('b.ig brother is watching you! 👀');
+        </script>
         <button data-consent-button>Open consent banner</button>
         <div data-consent-status></div>
 
